updated react to remove vulnerable packages, updated header and app to remove unused signup handler

--- a/section-5/basic-website-azure/frontend/src/App.css
+++ b/section-5/basic-website-azure/frontend/src/App.css
@@ -19,3 +19,21 @@
   font-size: large;
   padding-top: 20px;
 }
+
+.buttonLink {
+    background-color: transparent;
+    border: 0px solid transparent;
+    height: 100%;
+    width: 100%;
+    color: white;
+}
+
+.buttonLink:hover {
+    background-color: white;
+    color: #222;
+    cursor: pointer;
+}
+
+.ant-layout-header {
+  height: auto;
+}
